--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -49,7 +49,7 @@
         <%= form.submit 'Create Job', class: 'btn btn-primary btn-xs' %>
         <br>
         <br>
-        <%= link_to 'Go back to Jobs', [:jobs], class: 'btn btn-primary btn-xs btn-block' %>
+        <%= link_to 'Go back to Jobs', [:jobs], class: 'btn btn-primary btn-xs' %>
       <% end %>
     </div>
   </div>
