--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Cover</title>
-    <%= csrf_meta_tags %>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
-  <main class="container">
-    <%= render 'application/favicon' %>
-    <%= render 'layouts/top_nav' %>
-  </main>
-
-  <body>
-    <%= yield %>
-  </body>
+<head>
+  <title>Cover</title>
+  <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
+<body>
+<%= render 'application/favicon' %>
+<div class="container">
+  <%= render 'layouts/top_nav' %>
+</div>
+<%= yield %>
+</body>
 </html>
