--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,12 +1,7 @@
 <!-- View for a user, restaurant -->
 <div class="container">
   <div class="row">
-    <div class=".col-xs-12 .col-sm-6 .col-md-8">
-      <%= form_tag(jobs_path, method: :get) do %>
-        <%= text_field_tag :search, params[:search] %>
-        <%= submit_tag 'Search', name: nil %>
-      <% end %>
-
+    <div class="col-xs-12 col-sm-6 col-md-4">
       <% if current_user.usertype_id == 1 %>
           <section>
             <h3>Here are your current jobs, <%= current_user.restaurant_name %>.</h3>
@@ -24,9 +19,8 @@
 
           </section>
       <% else %>
-
           <!-- View for a user, worker -->
-          <h3>Here are the available jobs, <%= current_user.first_name %>.</h3>
+          
           <section>
             <div class="jobs">
               <%= render @jobs %>
