--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,10 +1,12 @@
 <!-- View for a user, restaurant -->
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-md-4">
+<div class="container-fluid">
       <% if current_user.usertype_id == 1 %>
-          <section>
-            <h3>Here are your current jobs, <%= current_user.restaurant_name %>.</h3>
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">Here are your job posts
+                    </h1>
+                </div>
+            </div>
             <div class="jobs">
               <% if @userjobs == nil %>
                   <h4>You have no jobs!</h4>
@@ -18,15 +20,13 @@
             </div>
 
           </section>
+
       <% else %>
           <!-- View for a user, worker -->
-          
-          <section>
-            <div class="jobs">
-              <%= render @jobs %>
-            </div>
-          </section>
+        <% @jobs.each_slice(3) do |jobs| %>
+                  <%= render :partial => "job", :collection => jobs, :as => :j %>
+        <% end %>
       <% end %>
-    </div>
-  </div>
 </div>
+
+        
