--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -10,7 +10,13 @@
       <a class="navbar-brand" href="/">Cover</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
-      <% if current_user %>
+      <% if current_user %>   
+    <div class="col-sm-3 col-md-3">
+      <%= form_tag(jobs_path, method: :get, class: "navbar-form") do %>
+        <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Search" %>
+      <% end %>
+      </div>
+
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
