--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -50,6 +50,10 @@
                       <tr>
                         <td> <%= c.user.first_name %></td>
                         <td> <%= c.status %> </td>
+                        <td> <%= form_for [@job, @application] do |f|%> 
+                                <%= f.button :Accept, class: 'btn btn-primary btn-xs' %>
+                             <% end %>
+                        </td>
                       </tr>
                   <% end %>
                   </tbody>
