--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -100,24 +100,77 @@
         </div>
 
   <% else %>
-      <!-- Workers view -->
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-3 col-sm-6">
-          <div class="card hovercard">
-            <div class="cardheader">
+     
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  <!-- Workers view -->
+   <div class="col-lg-12 col-sm-6">
+    <div class="card hovercard">
+        <div class="card-background">
+            <img class="card-bkimg" alt="" src="http://lorempixel.com/100/100/people/9/">
+            <!-- http://lorempixel.com/850/280/people/9/ -->
+        </div>
+        <div class="useravatar">
+            <img alt="" src="<%=@job.user.image%>">
+        </div>
+        <div class="card-info"> <span class="card-title"> <%= @job.user.restaurant_name %> </span>
 
-            </div>
-            <div class="avatar">
-              <img alt="" src="http://lorempixel.com/100/100/people">
-            </div>
+        </div>
+    </div>
+    <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
+        <div class="btn-group" role="group">
+            <button type="button" id="stars" class="btn btn-primary" href="#tab1" data-toggle="tab"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+                <div class="hidden-xs">Info</div>
+            </button>
+        </div>
+        <div class="btn-group" role="group">
+            <button type="button" id="favorites" class="btn btn-default" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+                <div class="hidden-xs">Location</div>
+            </button>
+        </div>
+        <div class="btn-group" role="group">
+            <button type="button" id="following" class="btn btn-default" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                <div class="hidden-xs">Comments</div>
+            </button>
+        </div>
+    </div>
 
-            <div class="info">
-              <div class="title">
-                <%= @job.user.restaurant_name %>
-              </div>
-
-              <div style="font-size:20px; font-weight:bold;" class="desc">Job position: <%= @job.jobtype.name %>
+        <div class="well">
+      <div class="tab-content">
+        <div class="tab-pane fade in active" id="tab1">
+            <div style="font-size:20px; font-weight:bold;" class="desc">Job position: <%= @job.jobtype.name %>
               </div>
 
               <br>
@@ -127,66 +180,66 @@
               <div class="desc">End time: <%= @job.end_time %>
               </div>
 
-              <div class="desc">Rate $: <%= @job.rate %>
+              <div class="desc">Rate: $<%= @job.rate %>
               </div>
 
               <div class="desc">Description: <%= @job.description %>
               </div>
-              <br>
+        </div>
+        <div class="tab-pane fade in" id="tab2">
+          <div>
+            <img src="<%= googleMapBuilderShow(@job.user.latitude, @job.user.longitude) %>">
+          </div>
+        </div>
+        <div class="tab-pane fade in" id="tab3">
+        <table class="table">
+              <thead>
+              <tr>
+                <th> Comments</th>
+              </tr>
+              </thead>
+              <tbody>
+              <% @job.comments.reverse_each do |c| %>
+                  <tr>
+                    <td> <%= c.user.first_name %></td>
+                    <td> <%= c.comment %> </td>
+                  </tr>
+              <% end %>
+              </tbody>
+            </table>
 
-              <div>
-                <img src="<%= googleMapBuilderShow(@job.user.latitude, @job.user.longitude) %>">
-              </div>
-              <br>
 
-              <table class="table">
-                <thead>
-                <tr>
-                  <th> Comments</th>
-                </tr>
-                </thead>
-                <tbody>
-                <% @job.comments.reverse_each do |c| %>
-                    <tr>
-                      <td> <%= c.user.first_name %></td>
-                      <td> <%= c.comment %> </td>
-                    </tr>
+            <table class="table">
+              <tr>
+                  <button class="btn btn-primary btn-xs" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    Add comment
+                  </button>
+                <td>
+                </td>
+                <td>
+                <%= form_for [@job, @application] do |a| %>
+                <% current_user %>
+                <%= a.button :Apply, class: 'btn btn-primary btn-xs' %>
                 <% end %>
-                </tbody>
-              </table>
-
-
-              <table class="table">
-                <tr>
-                  <td>
-                    <button class="btn btn-primary btn-xs" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                      Add comment
-                    </button>
-                  </td>
-                  <td>
-                  <%= form_for [@job, @application] do |a| %>
-                  <% current_user %>
-                  <%= a.button :Apply, class: 'btn btn-primary btn-xs' %>
-                  <% end %>
-                  </td>
-                </tr>
-                <tr>
-                  <div class="collapse" id="collapseExample">
-                    <div class="well">
-                      <%= form_for [@job, @comment] do |f| %>
-                      <%= f.text_area :comment %>
-                      <%= f.button :submit, class: 'btn btn-primary btn-xs' %>
-                      <% end %>
-                    </div>
+                </td>
+              </tr>
+              <tr>
+                <div class="collapse" id="collapseExample">
+                  <div class="well">
+                    <%= form_for [@job, @comment] do |f| %>
+                    <%= f.text_area :comment %>
+                    <%= f.button :submit, class: 'btn btn-primary btn-xs' %>
+                    <% end %>
                   </div>
-                </tr>
-              </table>
-                <%= link_to 'Go back to Jobs', [:jobs], class: 'btn btn-primary btn-xs' %>
-            </div>
+                </div>
+              </tr>
+            </table>
+            <%= link_to 'Go back to Jobs', [:jobs], class: 'btn btn-primary btn-xs' %>
           </div>
         </div>
       </div>
-    </div>
-  <% end %>
-</section>
+    </div>  
+  </div>
+<% end %>
+</div>
 
