--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -7,7 +7,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      <% if current_user %>
+      <a class="navbar-brand" href="/jobs">Cover</a>
+      <% else %>
       <a class="navbar-brand" href="/">Cover</a>
+      <% end %>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <% if current_user %>   
@@ -28,9 +32,9 @@
               <% if current_user.usertype_id != 1 %>
               <li><a href="/users/<%= current_user.id %>/applications"> Applications </a></li>
               <% end %>
-              <li><a href="/logout">Logout</a></li>
 
             </ul>
+          <li><a href="/logout">Logout</a></li>
         </ul>
       <% else %>
        <div class="nav navbar-nav navbar-right">
