--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,142 +1,7 @@
 <section class="jobs-show">
   <% if current_user.usertype_id == 1 %>
       <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-sm-6">
-            <div class="card hovercard">
-              <div class="cardheader">
-
-              </div>
-              <div class="avatar">
-                <img alt="" src="http://lorempixel.com/100/100/people">
-              </div>
-
-              <div class="info">
-                <div class="title">
-                  <%= current_user.restaurant_name %>
-                </div>
-
-                <div style="font-size:20px; font-weight:bold;" class="desc">Job position: <%= @job.jobtype.name %>
-                </div>
-
-                <br>
-
-                <div class="desc">Start time: <%= @job.start_time %>
-
-                </div>
-                <div class="desc">End time: <%= @job.end_time %>
-                </div>
-
-                <div class="desc">Rate $: <%= @job.rate %>
-                </div>
-
-                <div class="desc">Description: <%= @job.description %>
-                </div>
-                <br>
-
-                <div>
-                  <img src="<%= googleMapBuilderShow(@job.user.latitude, @job.user.longitude) %>">
-                </div>
-                <br>
-                <table class="table">
-                  <thead>
-                  <tr>
-                    <th> Applications</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <% @job.applications.reverse_each do |c| %>
-                      <tr>
-                        <td>
-                        <%= link_to (user_path(c.user.id)) do %>
-                          <strong><%= c.user.first_name %></strong>
-                        <% end %>
-                        </td>
-                        <td> <%= c.status %> </td>
-                        <td> <%= form_for [@job, @application] do |f|%> 
-                                <%= f.button :Accept, class: 'btn btn-primary btn-xs' %>
-                             <% end %>
-                        </td>
-                      </tr>
-                  <% end %>
-                  </tbody>
-                </table>
-
-                <table class="table">
-                  <thead>
-                  <tr>
-                    <th> Comments</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <% @job.comments.reverse_each do |c| %>
-                      <tr>
-                        <td> <%= c.user.first_name %></td>
-                        <td> <%= c.comment %> </td>
-                      </tr>
-                  <% end %>
-                  </tbody>
-                </table>
-
-                <%= link_to 'Delete Job', @job, class: 'btn btn-primary btn-xs', :method => :delete %>
-                <%= link_to 'Update Job', edit_job_path(@job), class: 'btn btn-primary btn-xs' %>
-                <button class="btn btn-primary btn-xs" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                  Add comment
-                </button>
-                <div class="collapse" id="collapseExample">
-                  <div class="well">
-                    <%= form_for [@job, @comment] do |f| %>
-                        <%= f.text_area :comment %>
-                        <%= f.button :submit, class: 'btn btn-primary btn-xs' %>
-                    <% end %>
-                  </div>
-                </div>
-              </div>
-              <div>
-                <%= link_to 'Go back to Jobs', [:jobs], class: 'btn btn-primary btn-xs' %>
-              </div>
-            </div>
-          </div>
-        </div>
-
-  <% else %>
-     
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  <!-- Workers view -->
-   <div class="col-lg-12 col-sm-6">
+        <div class="col-lg-12 col-sm-6">
     <div class="card hovercard">
         <div class="card-background">
             <img class="card-bkimg" alt="" src="http://lorempixel.com/100/100/people/9/">
@@ -167,7 +32,6 @@
         </div>
     </div>
 
-        <div class="well">
       <div class="tab-content">
         <div class="tab-pane fade in active" id="tab1">
             <div style="font-size:20px; font-weight:bold;" class="desc">Job position: <%= @job.jobtype.name %>
@@ -187,59 +51,180 @@
               </div>
         </div>
         <div class="tab-pane fade in" id="tab2">
-          <div>
-            <img src="<%= googleMapBuilderShow(@job.user.latitude, @job.user.longitude) %>">
-          </div>
+          <img src="<%= googleMapBuilderShow(@job.user.latitude, @job.user.longitude) %>">
         </div>
         <div class="tab-pane fade in" id="tab3">
+          
         <table class="table">
-              <thead>
+          <thead>
+          <tr>
+            <th> Applications</th>
+          </tr>
+          </thead>
+          <tbody>
+          <% @job.applications.reverse_each do |c| %>
               <tr>
-                <th> Comments</th>
-              </tr>
-              </thead>
-              <tbody>
-              <% @job.comments.reverse_each do |c| %>
-                  <tr>
-                    <td> <%= c.user.first_name %></td>
-                    <td> <%= c.comment %> </td>
-                  </tr>
-              <% end %>
-              </tbody>
-            </table>
-
-
-            <table class="table">
-              <tr>
-                  <button class="btn btn-primary btn-xs" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    Add comment
-                  </button>
                 <td>
-                </td>
-                <td>
-                <%= form_for [@job, @application] do |a| %>
-                <% current_user %>
-                <%= a.button :Apply, class: 'btn btn-primary btn-xs' %>
+                <%= link_to (user_path(c.user.id)) do %>
+                  <strong><%= c.user.first_name %></strong>
                 <% end %>
                 </td>
+                <td> <%= c.status %> </td>
+                <td> <%= form_for [@job, @application] do |f|%> 
+                        <%= f.button :Accept, class: 'btn btn-primary btn-xs' %>
+                      <% end %>
+                </td>
               </tr>
+          <% end %>
+          </tbody>
+        </table>
+
+        <table class="table">
+          <thead>
+          <tr>
+            <th> Comments</th>
+          </tr>
+          </thead>
+          <tbody>
+          <% @job.comments.reverse_each do |c| %>
               <tr>
-                <div class="collapse" id="collapseExample">
-                  <div class="well">
-                    <%= form_for [@job, @comment] do |f| %>
-                    <%= f.text_area :comment %>
-                    <%= f.button :submit, class: 'btn btn-primary btn-xs' %>
-                    <% end %>
-                  </div>
-                </div>
+                <td> <%= c.user.first_name %></td>
+                <td> <%= c.comment %> </td>
               </tr>
-            </table>
-            <%= link_to 'Go back to Jobs', [:jobs], class: 'btn btn-primary btn-xs' %>
+          <% end %>
+          </tbody>
+        </table>
+
+        <button class="btn btn-primary btn-xs" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+          Add comment
+        </button>
+        <div class="collapse" id="collapseExample">
+          <div class="well">
+            <%= form_for [@job, @comment] do |f| %>
+                <%= f.text_area :comment %>
+                <%= f.button :submit, class: 'btn btn-primary btn-xs' %>
+            <% end %>
           </div>
         </div>
+        </div>
       </div>
-    </div>  
+    </div>
+    
+    </div>
+  <% else %>
+  
+  
+  <!-- Workers view -->
+  <div class="container">
+   <div class="col-lg-12 col-sm-6">
+    <div class="card hovercard">
+      <div class="card-background">
+          <img class="card-bkimg" alt="" src="http://lorempixel.com/100/100/people/9/">
+          <!-- http://lorempixel.com/850/280/people/9/ -->
+      </div>
+      <div class="useravatar">
+          <img alt="" src="<%=@job.user.image%>">
+      </div>
+      <div class="card-info"> <span class="card-title"> <%= @job.user.restaurant_name %> </span>
+
+      </div>
+    </div>
+    <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
+      <div class="btn-group" role="group">
+          <button type="button" id="stars" class="btn btn-primary" href="#tab1" data-toggle="tab"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+              <div class="hidden-xs">Info</div>
+          </button>
+      </div>
+      <div class="btn-group" role="group">
+          <button type="button" id="favorites" class="btn btn-default" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+              <div class="hidden-xs">Location</div>
+          </button>
+      </div>
+      <div class="btn-group" role="group">
+          <button type="button" id="following" class="btn btn-default" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+              <div class="hidden-xs">Comments</div>
+          </button>
+      </div>
+    </div>
+
+<div class="well">
+  <div class="tab-content">
+    <div class="tab-pane fade in active" id="tab1">
+        <div style="font-size:20px; font-weight:bold;" class="desc">Job position: <%= @job.jobtype.name %>
+          </div>
+
+          <br>
+
+          <div class="desc">Start time: <%= @job.start_time %>
+          </div>
+          <div class="desc">End time: <%= @job.end_time %>
+          </div>
+
+          <div class="desc">Rate: $<%= @job.rate %>
+          </div>
+
+          <div class="desc">Description: <%= @job.description %>
+          </div>
+    </div>
+    <div class="tab-pane fade in" id="tab2">
+      <img src="<%= googleMapBuilderShow(@job.user.latitude, @job.user.longitude) %>">
+    </div>
+    <div class="tab-pane fade in" id="tab3">
+    <table class="table">
+          <thead>
+          <tr>
+            <th> Comments</th>
+          </tr>
+          </thead>
+          <tbody>
+          <% @job.comments.reverse_each do |c| %>
+              <tr>
+                <td> <%= c.user.first_name %></td>
+                <td> <%= c.comment %> </td>
+              </tr>
+          <% end %>
+          </tbody>
+        </table>
+
+
+        <table class="table">
+          <tr>
+              <button class="btn btn-primary btn-xs" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                Add comment
+              </button>
+            <td>
+            </td>
+            <td>
+            <%= form_for [@job, @application] do |a| %>
+            <% current_user %>
+            <%= a.button :Apply, class: 'btn btn-primary btn-xs' %>
+            <% end %>
+            </td>
+          </tr>
+          <tr>
+            <div class="collapse" id="collapseExample">
+              <div class="well">
+                <%= form_for [@job, @comment] do |f| %>
+                <%= f.text_area :comment %>
+                <%= f.button :submit, class: 'btn btn-primary btn-xs' %>
+                <% end %>
+              </div>
+            </div>
+          </tr>
+        </table>
+      </div>  
+    </div>
+  <% end %>
   </div>
-<% end %>
+</div>
+    </div>
+  </div>
+</section>
+<div class="container">
+  <%= link_to 'Go back to Jobs', [:jobs], class: 'btn btn-primary btn-xs' %>
+  <% if current_user.usertype_id == 1 %>
+      <%= link_to 'Delete Job', @job, class: 'btn btn-primary btn-xs', :method => :delete %>
+      <%= link_to 'Update Job', edit_job_path(@job), class: 'btn btn-primary btn-xs' %>
+  <% end %>
 </div>
 
