--- a/app/views/applications/_filter.html.erb
+++ b/app/views/applications/_filter.html.erb
@@ -1,15 +1,18 @@
-<div>
-  Name :<%= f.user.first_name %>
-</div>
-
-<div>
-  Status: <%= f.status %>
-</div>
-
-<div>
-  Title : <%= f.job.jobtype.name %>
-</div>
-
-<div>
-  Restaurant: <%= f.job.user.restaurant_name %>
+<div class="panel panel-default">
+<table class="table table-hover table-condensed">
+  <thread>
+    <tr>
+      <th>Name</th>
+      <th>Status</th>
+      <th>Title</th>
+      <th>Restaurant</th>
+    </tr>
+  </thread>
+  <tbody>
+    <td class="container"><%= f.user.first_name %></td>
+    <td class="container"><%= f.job.jobtype.name %></td>
+    <td class="container"><%= f.job.jobtype.name %></td>
+    <td class="container"><%= f.job.user.restaurant_name %></td>
+  </tbody>
+</table>
 </div>
