fixed table classes

--- a/app/views/applications/_filter.html.erb
+++ b/app/views/applications/_filter.html.erb
@@ -1,5 +1,5 @@
-<div class="panel panel-default">
-<table class="table table-hover table-condensed">
+<div class="table-responsive">
+<table class="table table-bordered">
   <thread>
     <tr>
       <th>Name</th>
