--- a/app/views/applications/_userapp.html.erb
+++ b/app/views/applications/_userapp.html.erb
@@ -1,4 +1,5 @@
-<table class="table table-hover table-condensed">
+<div class="table-responsive">
+<table class="table table-bordered">
   <thread>
     <tr>
       <th>Name</th>
@@ -14,3 +15,4 @@
     <td class="container"><%=userapp.job.user.restaurant_name%></td>
   </tbody>
 </table>
+</div>
