--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,20 @@
 <body class="homepage-bg">
   <div class="container">
     <div class="text-center">
-      <h1 class="display-5 main-message">Welcome to Cover</h1>
+      <h1 class="display-5 main-message">
+        Welcome to Cover
+      </h1>
     </div>
     <div class="text-center start-button">
-    <a href="" class="btn btn-primary" role="button" data-toggle="modal" data-target="#myModal"><strong> New here? Let's get started!</strong> </a>
+      <a href="" 
+        class="btn btn-primary" 
+        role="button" 
+        data-toggle="modal" 
+        data-target="#myModal">
+        <strong> 
+          New here? Let's get started!
+        </strong> 
+      </a>
+    </div>
   </div>
 </body>
