--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -3,29 +3,31 @@
     <div class="col-xs-12 col-sm-8 col-md-4">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title">Add your experience to your profile</h3>
+          <h3 class="panel-title">
+            Add your experience to your profile
+          </h3>
         </div>
         <div class="panel-body">
           <%= form_for [@user, @experience] do |f| %>
-              <div class="form-group">
-                <%= f.label :jobtype_id, 'Job description' %>:
-                <%= f.collection_select(:jobtype_id, Jobtype.all, :id, :name) %>
-              </div>
-              <div class="form-group">
-                <%= f.label :employer_name, 'Employer' %>:
-                <%= f.text_field :employer_name, class: "form-control input-sm" %>
-              </div>
-              <div class="form-group">
-                <%= f.label :months, 'Months of experience' %>:
-                <%= f.text_field :months, class: "form-control input-sm" %>
-              </div>
-              <div class="form-group">
-                <%= f.label :description, 'Additional description (optional)' %>:
-                <%= f.text_area :description, class: "form-control input-sm" %>
-              </div>
-              <div class="form-group">
-                <%= f.submit "Add", class: "btn btn-info btn-block" %>
-              </div>
+            <div class="form-group">
+              <%= f.label :jobtype_id, 'Job description' %>:
+              <%= f.collection_select(:jobtype_id, Jobtype.all, :id, :name) %>
+            </div>
+            <div class="form-group">
+              <%= f.label :employer_name, 'Employer' %>:
+              <%= f.text_field :employer_name, class: "form-control input-sm" %>
+            </div>
+            <div class="form-group">
+              <%= f.label :months, 'Months of experience' %>:
+              <%= f.text_field :months, class: "form-control input-sm" %>
+            </div>
+            <div class="form-group">
+              <%= f.label :description, 'Additional description (optional)' %>:
+              <%= f.text_area :description, class: "form-control input-sm" %>
+            </div>
+            <div class="form-group">
+              <%= f.submit "Add", class: "btn btn-info btn-block" %>
+            </div>
           <% end %>
         </div>
       </div>
