--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -1,47 +1,63 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <button type="button" 
+              class="navbar-toggle collapsed" 
+              data-toggle="collapse" 
+              data-target="#navbar" 
+              aria-expanded="false" 
+              aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
       <% if current_user %>
-      <a class="navbar-brand" href="/jobs">Cover</a>
+        <a class="navbar-brand" href="/jobs">Cover</a>
       <% else %>
-      <a class="navbar-brand" href="/">Cover</a>
+        <a class="navbar-brand" href="/">Cover</a>
       <% end %>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <% if current_user %>   
-    <div class="col-sm-3 col-md-3">
-      <%= form_tag(jobs_path, method: :get, class: "navbar-form") do %>
-        <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Search" %>
-      <% end %>
-      </div>
+        <div class="col-sm-3 col-md-3">
+          <%= form_tag(jobs_path, method: :get, class: "navbar-form") do %>
+            <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Search" %>
+          <% end %>
+        </div>
 
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            You are Signed in, <%= current_user.first_name %>
-            <span class="caret"></span>
-            <ul class="dropdown-menu">
-              <li><a href="/users/<%= current_user.id %>">Profile</a></li>
-              <li><a href="/jobs">Job Posts</a></li>
-              <% if current_user.usertype_id != 1 %>
-              <li><a href="/users/<%= current_user.id %>/applications"> Applications </a></li>
-              <% end %>
-
-            </ul>
-          <li><a href="/logout">Logout</a></li>
-        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a href="#" 
+               class="dropdown-toggle" 
+               data-toggle="dropdown" 
+               role="button" 
+               aria-haspopup="true" 
+               aria-expanded="false">
+              You are Signed in, <%= current_user.first_name %>
+              <span class="caret"></span>
+              <ul class="dropdown-menu">
+                <li><a href="/users/<%= current_user.id %>">Profile</a></li>
+                <li><a href="/jobs">Job Posts</a></li>
+                  <% if current_user.usertype_id != 1 %>
+                    <li>
+                      <a href="/users/<%= current_user.id %>/applications">
+                         Applications 
+                      </a>
+                    </li>
+                  <% end %>
+              </ul>
+            <li>
+              <a href="/logout">
+                Logout
+              </a>
+            </li>
+          </ul>
       <% else %>
        <div class="nav navbar-nav navbar-right">
           <a href="" class="btn btn-primary btn-xs signup" role="button" data-toggle="modal" data-target="#myModal">
-          <strong> Sign up</strong>
+            <strong> Sign up </strong>
           </a>
-
           <%= link_to 'Login', '/login', class: "btn btn-primary btn-xs login" %>
         </div>
       <% end %>
