centered location map

--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -336,4 +336,9 @@ section.jobs-show {
     .btn-pref .btn {
         -webkit-border-radius:0 !important;
     }
+    .map{
+        text-align: center;
+        width:90%;
+        margin:auto;
+    }
 }
