Edited profile photo

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,9 +14,10 @@
 
             <!-- Table showing restaurant details -->
             <div class="panel-body">
-
-              <img src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" class="img-rounded img-responsive">
-
+              <div class="panel-body">
+                <div class="wraper">
+                  <img src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" class="img-circle img-responsive profile">
+                </div>
               <table class="table">
                 <tr>
                   <td>
@@ -119,9 +120,9 @@
 
               <!-- Table showing worker details  -->
               <div class="panel-body">
-
-                <img src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" class="img-circle img-responsive">
-
+                <div class="wraper">
+                  <img src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" class="img-circle img-responsive profile">
+                </div>
                 <table class="table">
                   <tr>
                     <td>Phone:</td>
