--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -9,7 +9,9 @@
 
         <div class="info">
           <div class="title">
-            <%= j.user.restaurant_name %>
+            <%= link_to (user_path(j.user.id)) do %>
+              <strong><%= j.user.restaurant_name %></strong>
+            <% end %>
           </div>
 
           <div style="font-size:20px; font-weight:bold;" class="desc">
