--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -14,7 +14,9 @@
             </div>
             <div class="card-info">
             <span class="card-title">
-              <%= @job.user.restaurant_name %>
+              <%= link_to (user_path(@job.user.id)) do %>
+                <strong><%= @job.user.restaurant_name %></strong>
+              <% end %>
             </span>
             </div>
           </div>
