added address to cards in show

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -4,14 +4,16 @@
       <div class="row">
         <div class="col-lg-12">
           <h1 class="page-header">
-            Here are your job posts,
-            <%= link_to '+ New Job', [:new, :job], class: 'btn btn-primary btn-xs' %>
+            Here are your job posts, <%= current_user.restaurant_name %>
           </h1>
+          <%= link_to '+ New Job', [:new, :job], class: 'btn btn-primary btn-xs' %>
         </div>
       </div>
       <div class="jobs">
         <% if @userjobs == nil %>
-            <h4>You have no jobs!</h4>
+          <h1 class="page-header">
+            You have no jobs!
+          </h1>
             <%= link_to '+ New Job', [:new, :job], class: 'btn btn-primary btn-xs' %>
         <% else %>
             <% @userjobs.each_slice(3) do |jobs| %>
