--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -341,4 +341,10 @@ section.jobs-show {
         width:90%;
         margin:auto;
     }
+    .address{
+        text-align: center;
+        margin-bottom:5px;
+        font-size: 19px;
+        font-weight: bold;
+    }
 }
