--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -4,5 +4,10 @@
 .profile{
   width:50%;
   margin:auto;
-
 }
+.address{
+  text-align: center;
+  margin-bottom:5px;
+  font-size: 19px;
+  font-weight: bold;
+    }
