--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -229,11 +229,11 @@
                 <br>
 
                 <div class="desc">
-                  Start time: <%= @job.start_time.strftime('%e %b %Y %H:%M:%p') %>
+                  Start time: <%= @job.start_time.strftime('%A, %B %e at %l:%M %P') %>
                 </div>
 
                 <div class="desc">
-                  End time: <%= @job.end_time.strftime('%e %b %Y %H:%M:%p') %>
+                  End time: <%= @job.end_time.strftime('%A, %B %e at %l:%M %P') %>
                 </div>
 
                 <div class="desc">
