--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
             <!-- Table showing restaurant details -->
             <div class="panel-body">
               <div class="wrapper">
-                <img src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" class="img-rounded img-responsive profile">
+                <img class="img-circle img-responsive" src="<%=@user.image%>">
               </div>
             </div>
 
@@ -124,7 +124,7 @@
             <!-- Table showing worker details  -->
             <div class="panel-body">
               <div class="wrapper">
-                <img src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" class="img-circle img-responsive profile">
+                <img class="img-circle img-responsive" src="<%=@user.image%>">
               </div>
             </div>
 
