--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -196,7 +196,7 @@
     }
 
     .card.hovercard .cardheader {
-        background: url("http://lorempixel.com/850/280/food");
+        background:#737373;
         background-size: cover;
         height: 135px;
     }
