--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -116,7 +116,9 @@
                           <% end %>
                         </td>
                         <td><%= c.status %></td>
+                        <% if c.status != "Accepted" %>
                         <td><%= button_to 'Accept', application_path, params: {application_id: c.id}, method: :put %></td>
+                        <% end %>
                       </tr>
                   <% end %>
                   </tbody>
